# kayaknav

./: .gitignore  Cargo.toml  Cranky.toml  README.md  build_web.sh  deny.toml
android/: .gitignore  Cargo.toml  README.md  build.gradle.kts  build.rs  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/src/: lib.rs
src/: app.rs  error_utils.rs  features.rs  html_panic_hook.rs  http.rs  lib.rs  noaa.rs  prelude.rs  run_ui.rs  saturating.rs  scheduling.rs  setup.rs  sun.rs
src/state/: egui_state.rs  galileo_state.rs  mod.rs
tides/: Cargo.toml
tides/benches/: event_detection.rs  predictor.rs
tides/data/: harcons.bin.zst
tides/src/: bundled.rs  error_utils.rs  events.rs  lib.rs  noaa.rs  predictor.rs  prelude.rs  store.rs  util.rs
tides/tests/: offline.rs
web/: index.html  manifest.webmanifest  sw.js
web/functions/: proxy.js
