[package]
edition = "2021"
name = "kayaknav"
version = "0.1.0"
license = "AGPL-3.0-or-later"

[profile.release]
lto = true
codegen-units = 1

[profile.release-with-symbols]
inherits = "release"
debug = true

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
demangle-name-section = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  '-O4',
  '--debuginfo'
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
# backon = "0.4.4"
bitflags = "2.6.0"
chrono = "0.4.38"
egui = "0.27.2"
egui_extras = "0.27.2"
egui-wgpu = "0.27.2"
env_logger = { version = "0.11.3", default-features = false }
fallible-iterator = "0.3.0"
futures = "0.3.30"
galileo = { git = "https://github.com/Maximkaaa/galileo.git" }
#galileo = { path = "../galileo/galileo" }
galileo-types = { git = "https://github.com/Maximkaaa/galileo.git" }
#galileo-types = { path = "../galileo/galileo-types" }
itertools = "0.13.0"
jord = "0.14.0"
lru = "0.12.3"
num-traits = "0.2.17"
once_cell = "1.19.0"
ordered-float = "4.2.0"
polars = { version = "0.40.0", default-features = false, features = ["abs", "dtype-struct", "interpolate", "lazy", "round_series", "temporal"] }
reqwest = "0.12.5"
rstar = "0.12.0"
serde = "1.0.203"
serde_json = "1.0.117"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uom = "0.36.0"
wgpu = { version = "0.19.4", default-features = false }
winit = { version = "0.29.15", default-features = false }
urlencoding = "2.1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.27.2", default-features = false, features = ["links"] }
js-sys = "0.3.69"
tracing = { version = "0.1.40", features = ["max_level_warn",
                                            "release_max_level_warn"] }
log = { version = "0.4.22", features = ["max_level_warn",
                                        "release_max_level_warn"] }
tracing-web = "0.1.3"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.27.2"
bpaf = "0.9.12"
tokio = { version = "1.38.0", default-features = false, features = ["full"] }
tracing = "0.1.40"
http-cache-reqwest = "0.14.0"
reqwest-middleware = "0.3.1"
reqwest-retry = "0.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.http-cache]
version = "*"
default-features = false
features = ["manager-cacache", "cacache-tokio"]
